--- a/2018.md
+++ b/2018.md
@@ -2,8 +2,8 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
-| Jul 14, 2017 | Jul 7, 2017 | SBMF | <a href="http://sbmf2017.cin.ufpe.br/">20th Brazilian Symposium on Formal Methods</a> | Nov 27-Dec 1, 2017 | Recife, Brazil | 
-| Jul 21, 2017 |  | HVC | <a href="https://www.research.ibm.com/haifa/conferences/hvc2017/">13th Haifa Verification Conference</a> | Nov 13-15, 2017 | IBM Haifa Labs, Israel | 
+<!-- | Jul 21, 2017 |  | HVC | <a href="https://www.research.ibm.com/haifa/conferences/hvc2017/">13th Haifa Verification Conference</a> | Nov 13-15, 2017 | IBM Haifa Labs, Israel | -->
+| Jul 20, 2018 |  | SBMF | <a href="http://www.sbmf2018.ufba.br/">21st Brazilian Symposium on Formal Methods</a> | Nov 28-30, 2018 | Salvador, Brazil | 
 | Jun 25, 2018 | Jun 18, 2018 | RV | <a href="https://rv2018.isp.uni-luebeck.de/">18th International Conference on Runtime Verification</a> | Nov 10-13, 2018 | Limassol, Cyprus | 
 | Jun 15, 2018 | Jun 12, 2018 | APLAS | <a href="http://aplas2018.org/">16th Asian Symposium on Programming Languages and Systems</a> | Dec 3-5, 2018 | Wellington, New Zealand | 
 | Jun 1, 2018 |  | PRDC | <a href="http://prdc.dependability.org/PRDC2018/">23rd IEEE Pacific Rim International Symposium on Dependable Computing</a> | Dec 4-7, 2018 | Taipei, Taiwan | 
@@ -12,7 +12,6 @@
 | May 21, 2017 | May 14, 2017 | FMICS-AVoCS | <a href="http://www.es.mdh.se/conferences/fmics-avocs-2017/">International Workshop on Formal Methods for Industrial Critical Systems and Automated Verification of Critical Systems</a> | Sep 18-20, 2017 | Torino, Italy | 
 | May 14, 2018 | May 7, 2018 | ICFEM | <a href="http://formal-analysis.com/icfem/2018/">20th International Conference on Formal Engineering Methods</a> | Nov 12-16, 2018 | Gold Coast, Australia | 
 | May 11, 2018 | May 4, 2018 | ICTAC | <a href="https://www.ictac.org.za/">15th International Colloquium on Theoretical Aspects of Computing</a> | Oct 12-19, 2018 | Stellenbosch, South Africa | 
-| May 20, 2016 |  | (EC)2 | <a href="http://ecee.colorado.edu/pavol/ec2-2016/">9th International Workshop on Exploiting Concurrency Efficiently and Correctly</a> | Jul 18, 2016 | Toronto, Canada | 
 | May 5, 2018 | May 1, 2018 | ISSRE | <a href="http://www.issre.net/">29th IEEE International Symposium on Software Reliability Engineering</a> | Oct 15-18, 2018 | Memphis, Tennessee, USA | 
 | May 4, 2018 |  | ATVA | <a href="http://atva-conference.org/">16th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 7-10, 2018 | Los Angeles, California, USA | 
 | May 1, 2017 |  | EuroMPI | <a href="http://www.mcs.anl.gov/eurompi2017/">24th European MPI Users' Group Meeting</a> | Sep 25-28, 2017 | Chicago, Illinois, USA | 
