--- a/2018.md
+++ b/2018.md
@@ -2,7 +2,7 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
-<!-- | Jul 21, 2017 |  | HVC | <a href="https://www.research.ibm.com/haifa/conferences/hvc2017/">13th Haifa Verification Conference</a> | Nov 13-15, 2017 | IBM Haifa Labs, Israel | -->
+<!--- | Jul 21, 2017 |  | HVC | <a href="https://www.research.ibm.com/haifa/conferences/hvc2017/">13th Haifa Verification Conference</a> | Nov 13-15, 2017 | IBM Haifa Labs, Israel | -->
 | Jul 20, 2018 |  | SBMF | <a href="http://www.sbmf2018.ufba.br/">21st Brazilian Symposium on Formal Methods</a> | Nov 28-30, 2018 | Salvador, Brazil | 
 | Jun 25, 2018 | Jun 18, 2018 | RV | <a href="https://rv2018.isp.uni-luebeck.de/">18th International Conference on Runtime Verification</a> | Nov 10-13, 2018 | Limassol, Cyprus | 
 | Jun 15, 2018 | Jun 12, 2018 | APLAS | <a href="http://aplas2018.org/">16th Asian Symposium on Programming Languages and Systems</a> | Dec 3-5, 2018 | Wellington, New Zealand | 
