--- a/2018.md
+++ b/2018.md
@@ -2,27 +2,24 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| Aug 13, 2018 | Aug 6, 2018 | LPAR | <a href="https://easychair.org/smart-program/LPAR-22/">22nd International Conference on Logic for Programming, Artificial Intelligence and Reasoning</a> | Nov 16-21, 2018 | Awassa, Ethiopia | 
 | Jul 20, 2018 |  | SBMF | <a href="http://www.sbmf2018.ufba.br/">21st Brazilian Symposium on Formal Methods</a> | Nov 28-30, 2018 | Salvador, Brazil | 
 | Jun 25, 2018 | Jun 18, 2018 | RV | <a href="https://rv2018.isp.uni-luebeck.de/">18th International Conference on Runtime Verification</a> | Nov 10-13, 2018 | Limassol, Cyprus | 
 | Jun 15, 2018 | Jun 12, 2018 | APLAS | <a href="http://aplas2018.org/">16th Asian Symposium on Programming Languages and Systems</a> | Dec 3-5, 2018 | Wellington, New Zealand | 
 | Jun 1, 2018 |  | PRDC | <a href="http://prdc.dependability.org/PRDC2018/">23rd IEEE Pacific Rim International Symposium on Dependable Computing</a> | Dec 4-7, 2018 | Taipei, Taiwan | 
 | May 18, 2018 | May 11, 2018 | FMCAD | <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD18/">18th International Conference on Formal Methods in Computer-Aided Design</a> | Oct 30-Nov 2, 2018 | Austin, Texas, USA | 
-| May 10, 2016 | May 3, 2016 | OSDI | <a href="https://www.usenix.org/conference/osdi16">12th USENIX Symposium on Operating Systems Design and Implementation</a> | Nov 2-4, 2016 | Savannah, Georgia, USA | 
-| May 21, 2017 | May 14, 2017 | FMICS-AVoCS | <a href="http://www.es.mdh.se/conferences/fmics-avocs-2017/">International Workshop on Formal Methods for Industrial Critical Systems and Automated Verification of Critical Systems</a> | Sep 18-20, 2017 | Torino, Italy | 
 | May 14, 2018 | May 7, 2018 | ICFEM | <a href="http://formal-analysis.com/icfem/2018/">20th International Conference on Formal Engineering Methods</a> | Nov 12-16, 2018 | Gold Coast, Australia | 
 | May 11, 2018 | May 4, 2018 | ICTAC | <a href="https://www.ictac.org.za/">15th International Colloquium on Theoretical Aspects of Computing</a> | Oct 12-19, 2018 | Stellenbosch, South Africa | 
+| May 7, 2018 | Apr 23, 2018 | SETTA | <a href="http://lcs.ios.ac.cn/setta2018/">4th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Sep 4-6, 2018 | Beijing, China | 
 | May 5, 2018 | May 1, 2018 | ISSRE | <a href="http://www.issre.net/">29th IEEE International Symposium on Software Reliability Engineering</a> | Oct 15-18, 2018 | Memphis, Tennessee, USA | 
 | May 4, 2018 |  | ATVA | <a href="http://atva-conference.org/">16th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 7-10, 2018 | Los Angeles, California, USA | 
-| May 1, 2017 |  | EuroMPI | <a href="http://www.mcs.anl.gov/eurompi2017/">24th European MPI Users' Group Meeting</a> | Sep 25-28, 2017 | Chicago, Illinois, USA | 
-| May 1, 2017 | Apr 24, 2017 | VSTTE | <a href="https://vstte17.lri.fr/">9th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 22-23, 2017 | Heidelberg, Germany | 
-| Apr 28, 2017 | Apr 21, 2017 | SETTA | <a href="http://lcs.ios.ac.cn/setta2017/">3rd International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Oct 23-25, 2017 | Changsha, China | 
+| May 3, 2018 | Apr 26, 2018 | OSDI | <a href="https://www.usenix.org/conference/osdi18">13th USENIX Symposium on Operating Systems Design and Implementation</a> | Oct 8-10, 2018 | Carlsbad, California, USA | 
+| May 1, 2018 |  | EuroMPI | <a href="https://eurompi2018.bsc.es/">25th European MPI Users' Group Meeting</a> | Sep 23-26, 2018 | Barcelona, Spain | 
 | Apr 27, 2018 | Apr 20, 2018 | FMICS | <a href="http://fmics2018.fi.muni.cz/">23rd International Conference on Formal Methods for Industrial Critical Systems</a> | Sep 3-4, 2018 | Maynooth, Ireland | 
 | Apr 26, 2018 | Apr 19, 2018 | ASE | <a href="http://www.ase2018.com">33rd IEEE/ACM International Conference on Automated Software Engineering</a> | Sep 3-7, 2018 | Montpellier, France | 
 | Apr 23, 2018 | Apr 17, 2018 | CONCUR | <a href="http://lcs.ios.ac.cn/concur2018/">29th International Conference on Concurrency Theory</a> | Sep 4-7, 2018 | Beijing, China | 
-| Apr 1, 2014 |  | SSV | <a href="http://www.ssv-conference.org/">8th International Workshop on Systems Software Verification</a> | Jul 23-24, 2014 | Vienna, Austria | 
-| Apr 21, 2017 | Apr 14, 2017 | SOSP | <a href="https://www.sigops.org/sosp/sosp17/">26th ACM Symposium on Operating Systems Principles</a> | Oct 29-31, 2017 | Shanghai, China | 
+| Apr 22, 2018 | Apr 15, 2018 | VSTTE | <a href="http://vstte18.it.uu.se/">10th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 18-19, 2018 | Oxford, UK | 
 | Apr 20, 2018 | Apr 16, 2018 | IFM | <a href="https://ifm2018.cs.nuim.ie/">14th International Conference on integrated Formal Methods</a> | Sep 5-7, 2018 | Maynooth, Ireland | 
-| Feb 15, 2013 |  | PASTE | <a href="http://www.cs.williams.edu/PASTE2013/index.html">11th ACM SIGPLAN/SIGSOFT Workshop on Program Analysis for Software Tools and Engineering</a> | Jun 20, 2013 | Seattle, Washington, USA | 
 | Apr 16, 2018 |  | SPLASH | <a href="https://conf.researchr.org/home/splash-2018">9th Annual Conference on Systems, Programming, Languages and Applications: Software for Humanity</a> | Nov 4-9, 2018 | Boston, Massachusetts, USA | 
 | Apr 15, 2018 | Apr 10, 2018 | AVOCS | <a href="http://avocs18.irisa.fr/">18th International Workshop on Automated Verification of Critical Systems</a> | Jul 18-19, 2018 | Oxford, UK | 
 | Apr 15, 2018 | Apr 8, 2018 | SMT | <a href="http://smt-workshop.cs.uiowa.edu/2018/">16th International Workshop on Satisfiability Modulo Theories</a> | Jul 12-13, 2018 | Oxford, UK | 
@@ -31,12 +28,10 @@
 | Mar 2, 2018 | Feb 23, 2018 | TASE | <a href="https://tase2018.jnu.edu.cn/">12th International Symposium on Theoretical Aspects of Software Engineering</a> | Aug 29-31, 2018 | Guangzhou, China | 
 | Mar 2, 2018 | Feb 23, 2018 | SEFM | <a href="https://www.isf.cs.tu-bs.de/cms/events/sefm2018/">16th IEEE International Conference on Software Engineering and Formal Methods</a> | Jun 27-29, 2018 | Toulouse, France | 
 | Mar 2, 2018 | Feb 23, 2018 | TAP | <a href="https://tap18.lri.fr/">18th International Conference on Tests and Proofs</a> | Jun 27-29, 2018 | Toulouse, France | 
-| Feb 18, 2017 | Feb 11, 2017 | CADE | <a href="http://cade-26.info/">26th International Conference on Automated Deduction</a> | Aug 6-11, 2017 | Gothenburg, Sweden | 
 | Feb 18, 2018 |  | SPIN | <a href="http://spin2018.uma.es/">25th International SPIN Symposium on Model Checking Software</a> | Jun 20-22, 2018 | Malaga, Spain | 
 | Jan 31, 2018 |  | CAV | <a href="http://cavconference.org/2018/">30th International Conference on Computer Aided Verification</a> | Jul 14-17, 2018 | Oxford, UK | 
 | Jan 31, 2018 | Jan 24, 2018 | LICS | <a href="http://lics.siglog.org/lics18/">33rd Annual IEEE Symposium on Logic in Computer Science</a> | Jul 9-12, 2018 | Oxford, UK | 
 | Jan 29, 2018 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2018">International Symposium on Software Testing and Analysis</a> | Jul 16-22, 2018 | Amsterdam, The Netherlands | 
-| Jan 22, 2017 | Jan 18, 2017 | LPAR | <a href="http://easychair.org/smart-program/LPAR-21/">21st International Conference on Logic for Programming, Artificial Intelligence and Reasoning</a> | May 7-12, 2017 | Maun, Botswana | 
 | Jan 29, 2018 | Jan 22, 2018 | IJCAR | <a href="http://ijcar2018.org/">9th International Joint Conference on Automated Reasoning</a> | Jul 14-17, 2018 | Oxford, UK | 
 | Jan 22, 2018 | Jan 8, 2018 | FM | <a href="http://www.fm2018.org/">22nd International Symposium on Formal Methods</a> | Jul 15-17, 2018 | Oxford, UK | 
 | Jan 18, 2018 | Jan 11, 2018 | ICS | <a href="http://ics2018.ict.ac.cn/">32nd International Conference on Supercomputing</a> | Jun 13-15, 2018 | Beijing, China | 
@@ -57,5 +52,15 @@
 | Jul 7, 2017 |  | POPL | <a href="http://popl18.sigplan.org/">45th Annual ACM SIGPLAN - SIGACT Symposium on Principles of Programming Languages</a> | Jan 8-13, 2018 | Los Angeles, California, USA | 
 
 
-<!--- | Jul 21, 2017 |  | HVC | <a href="https://www.research.ibm.com/haifa/conferences/hvc2017/">13th Haifa Verification Conference</a> | Nov 13-15, 2017 | IBM Haifa Labs, Israel | -->
+<!---
+
+TODOs
+
+| Jul 21, 2017 |  | HVC | <a href="https://www.research.ibm.com/haifa/conferences/hvc2017/">13th Haifa Verification Conference</a> | Nov 13-15, 2017 | IBM Haifa Labs, Israel |
+| May 21, 2017 | May 14, 2017 | FMICS-AVoCS | <a href="http://www.es.mdh.se/conferences/fmics-avocs-2017/">International Workshop on Formal Methods for Industrial Critical Systems and Automated Verification of Critical Systems</a> | Sep 18-20, 2017 | Torino, Italy | 
+| Apr 1, 2014 |  | SSV | <a href="http://www.ssv-conference.org/">8th International Workshop on Systems Software Verification</a> | Jul 23-24, 2014 | Vienna, Austria | 
+| Apr 21, 2017 | Apr 14, 2017 | SOSP | <a href="https://www.sigops.org/sosp/sosp17/">26th ACM Symposium on Operating Systems Principles</a> | Oct 29-31, 2017 | Shanghai, China | 
+| Feb 18, 2017 | Feb 11, 2017 | CADE | <a href="http://cade-26.info/">26th International Conference on Automated Deduction</a> | Aug 6-11, 2017 | Gothenburg, Sweden | 
+
+-->
 
