--- a/2019.md
+++ b/2019.md
@@ -2,6 +2,7 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| Jan 11, 2019 |  | ECOOP | <a href="https://conf.researchr.org/home/ecoop-2019">33rd European Conference on Object-Oriented Programming</a> | July, 2019 | London, UK | 
 | Aug 24, 2018 |  | ICSE | <a href="http://conf.researchr.org/home/icse-2019">41st International Conference on Software Engineering</a> | May 25-31, 2019 | Montreal, Canada | 
 | Aug 13, 2018 |  | PPoPP | <a href="https://ppopp19.sigplan.org/">24th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a> | Feb 16-20, 2019 | Washington, DC, USA | 
 | Jul 11, 2018 |  | POPL | <a href="http://popl19.sigplan.org/">46th Annual ACM SIGPLAN - SIGACT Symposium on Principles of Programming Languages</a> | Jan 13-19, 2019 | Lisbon, Portugal | 
