added confs with available dates to 2019

--- a/2019.md
+++ b/2019.md
@@ -2,7 +2,19 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| Jan 28, 2019 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2019">International Symposium on Software Testing and Analysis</a> | July 15-19, 2019 | Beijing, China |
 | Jan 11, 2019 |  | ECOOP | <a href="https://conf.researchr.org/home/ecoop-2019">33rd European Conference on Object-Oriented Programming</a> | July, 2019 | London, UK | 
+| Dec 7, 2018 | Nov 30, 2018 | DSN | <a href="http://www.dsn.org/">49th Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 24-27, 2019 | Portland, Oregon, USA |
+| Nov 16, 2018 |  | PLDI | <a href="https://conf.researchr.org/home/pldi-2019">40th ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 24-26, 2019 | Arizona, USA |
+|  |  | ETAPS | <a href="http://www.etaps.org/">The European Joint Conferences on Theory and Practice of Software</a> | Apr 6-11, 2019 | Prague, Czech Republic |
+| Nov 15, 2018 | Nov 7, 2018 | TACAS | <a href="https://conf.researchr.org/track/etaps-2019/tacas-2019-papers">25th International Conference on Tools and Algorithms for the Construction and Analysis of Systems</a> | Apr 8-11, 2019 | Prague, Czech Republic | 
+| Nov 15, 2018 | Nov 7, 2018 | FOSSACS | <a href="https://conf.researchr.org/track/etaps-2019/fossacs-2019-papers">22nd International Conference on Foundations of Software Science and Computation Structures</a> | Apr 8-11, 2019 | Prague, Czech Republic |
+| Nov 15, 2018 | Nov 7, 2018 | FASE | <a href="https://conf.researchr.org/track/etaps-2019/fase-2019-papers">22nd International Conference on Fundamental Approaches to Software Engineering</a> | Apr 8-11, 2019 | Prague, Czech Republic |
+| Nov 15, 2018 | Nov 7, 2018 | ESOP | <a href="https://conf.researchr.org/track/etaps-2019/esop-2019-papers">28th European Symposium on Programming</a> | Apr 8-11, 2019 | Prague, Czech Republic | 
+| Oct 31, 2018 | | ISEC | <a href="http://isoft.acm.org/isec2019/">12th Innovations in Software Engineering Conference</a> | Feb 14-16, 2019 | Pune, India |
+| Oct 12, 2018 | Oct 5, 2018 | ICST | <a href="http://icst2019.xjtu.edu.cn/">12th International Conference on Software Testing, Verification, and Validation</a> | Apr 24-26, 2019 | Xian, China |
+| Oct 1, 2018 |  | VMCAI | <a href="http://popl19.sigplan.org/track/VMCAI-2019">20th International Conference on Verification, Model Checking and Abstract Interpretation</a> | Jan 13-15, 2019 | Lisbon, Portugal | 
+| Oct 1, 2018 | Sep 24, 2018 | EuroSys | <a href="https://www.eurosys2019.org/">European Conference on Computer Systems</a> | March 25-28, 2019 | Dresden, Germany | 
 | Aug 24, 2018 |  | ICSE | <a href="http://conf.researchr.org/home/icse-2019">41st International Conference on Software Engineering</a> | May 25-31, 2019 | Montreal, Canada | 
 | Aug 13, 2018 |  | PPoPP | <a href="https://ppopp19.sigplan.org/">24th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a> | Feb 16-20, 2019 | Washington, DC, USA | 
 | Jul 11, 2018 |  | POPL | <a href="http://popl19.sigplan.org/">46th Annual ACM SIGPLAN - SIGACT Symposium on Principles of Programming Languages</a> | Jan 13-19, 2019 | Lisbon, Portugal | 
@@ -40,25 +52,12 @@ TODOs
 | Mar 2, 2018 | Feb 23, 2018 | SEFM | <a href="https://www.isf.cs.tu-bs.de/cms/events/sefm2018/">16th IEEE International Conference on Software Engineering and Formal Methods</a> | Jun 27-29, 2018 | Toulouse, France | 
 | Mar 2, 2018 | Feb 23, 2018 | TAP | <a href="https://tap18.lri.fr/">18th International Conference on Tests and Proofs</a> | Jun 27-29, 2018 | Toulouse, France | 
 | Feb 18, 2018 |  | SPIN | <a href="http://spin2018.uma.es/">25th International SPIN Symposium on Model Checking Software</a> | Jun 20-22, 2018 | Malaga, Spain | 
-| Jan 31, 2018 |  | CAV | <a href="http://cavconference.org/2018/">30th International Conference on Computer Aided Verification</a> | Jul 14-17, 2018 | Oxford, UK | 
-| Jan 31, 2018 | Jan 24, 2018 | LICS | <a href="http://lics.siglog.org/lics18/">33rd Annual IEEE Symposium on Logic in Computer Science</a> | Jul 9-12, 2018 | Oxford, UK | 
-| Jan 29, 2018 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2018">International Symposium on Software Testing and Analysis</a> | Jul 16-22, 2018 | Amsterdam, The Netherlands | 
+| Jan 31, 2018 |  | CAV | <a href="http://i-cav.org/2019/">31st International Conference on Computer Aided Verification</a> | Jul 15-18, 2019 | New York City, NY, USA | 
+| Jan 31, 2018 | Jan 24, 2018 | LICS | <a href="">34th Annual IEEE Symposium on Logic in Computer Science</a> | Jun 22-27, 2019 | Vancouver, Canada | 
 | Jan 29, 2018 | Jan 22, 2018 | IJCAR | <a href="http://ijcar2018.org/">9th International Joint Conference on Automated Reasoning</a> | Jul 14-17, 2018 | Oxford, UK | 
 | Jan 22, 2018 | Jan 8, 2018 | FM | <a href="http://www.fm2018.org/">22nd International Symposium on Formal Methods</a> | Jul 15-17, 2018 | Oxford, UK | 
-| Jan 18, 2018 | Jan 11, 2018 | ICS | <a href="http://ics2018.ict.ac.cn/">32nd International Conference on Supercomputing</a> | Jun 13-15, 2018 | Beijing, China | 
-| Dec 4, 2017 | Nov 27, 2017 | DSN | <a href="https://dsn2018.uni.lu/">48th Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 25-28, 2018 | Luxembourg City, Luxembourg | 
 | Nov 20, 2017 | Nov 10, 2017 | NFM | <a href="https://shemesh.larc.nasa.gov/NFM2018/">10th NASA Formal Methods Symposium</a> | Apr 17-19, 2018 | Newport News, Virginia, USA | 
-| Nov 16, 2017 |  | PLDI | <a href="http://conf.researchr.org/home/pldi-2018">39th ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 18-22, 2018 | Philadelphia, Pennsylvania, USA | 
-| Oct 27, 2017 | Oct 20, 2017 | EuroSys | <a href="http://eurosys2018.org/">European Conference on Computer Systems</a> | Apr 23-26, 2018 | Porto, Portugal | 
-|  |  | ETAPS | <a href="http://www.etaps.org/">The European Joint Conferences on Theory and Practice of Software</a> | Apr 14-21, 2018 | Thessaloniki, Greece | 
-| Oct 20, 2017 | Oct 13, 2017 | TACAS | <a href="http://www.etaps.org/index.php/2018/tacas">24th International Conference on Tools and Algorithms for the Construction and Analysis of Systems</a> | Apr 14-21, 2018 | Thessaloniki, Greece | 
-| Oct 20, 2017 | Oct 13, 2017 | FOSSACS | <a href="http://www.etaps.org/index.php/2018/fossacs">21st International Conference on Foundations of Software Science and Computation Structures</a> | Apr 14-21, 2018 | Thessaloniki, Greece | 
-| Oct 20, 2017 | Oct 13, 2017 | FASE | <a href="http://www.etaps.org/index.php/2018/fase">21st International Conference on Fundamental Approaches to Software Engineering</a> | Apr 14-21, 2018 | Thessaloniki, Greece | 
-| Oct 20, 2017 | Oct 13, 2017 | ESOP | <a href="http://www.etaps.org/index.php/2018/esop">27th European Symposium on Programming</a> | Apr 14-21, 2018 | Thessaloniki, Greece | 
-| Oct 12, 2017 | Oct 5, 2017 | ICST | <a href="http://www.es.mdh.se/icst2018/">11th International Conference on Software Testing, Verification, and Validation</a> | Apr 9-13, 2018 | Västerås, Sweden | 
-| Oct 6, 2017 |  | VMCAI | <a href="http://conf.researchr.org/track/VMCAI-2018/VMCAI-2018-papers">19th International Conference on Verification, Model Checking and Abstract Interpretation</a> | Jan 7-9, 2018 | Los Angeles, California, USA | 
-| Sep 17, 2017 | Sep 10, 2017 | ISEC | <a href="http://isoft.acm.org/isec2018/">11th Innovations in Software Engineering Conference</a> | Feb 9-11, 2018 | Hyderabad, India | 
-
+|  |  | ICS | <a href="">33rd International Conference on Supercomputing</a> | Jun 26-28, 2019 | Phoenix, Arizona, USA |
 | Jul 21, 2017 |  | HVC | <a href="https://www.research.ibm.com/haifa/conferences/hvc2017/">13th Haifa Verification Conference</a> | Nov 13-15, 2017 | IBM Haifa Labs, Israel |
 | May 21, 2017 | May 14, 2017 | FMICS-AVoCS | <a href="http://www.es.mdh.se/conferences/fmics-avocs-2017/">International Workshop on Formal Methods for Industrial Critical Systems and Automated Verification of Critical Systems</a> | Sep 18-20, 2017 | Torino, Italy | 
 | Apr 1, 2014 |  | SSV | <a href="http://www.ssv-conference.org/">8th International Workshop on Systems Software Verification</a> | Jul 23-24, 2014 | Vienna, Austria | 
