--- a/2019.md
+++ b/2019.md
@@ -2,12 +2,17 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| May 10, 2019 | May 3, 2019 | SEFM | <a href="https://sefm2019.inria.fr/">17th IEEE International Conference on Software Engineering and Formal Methods</a> | Sep 16-20, 2019 | Oslo, Norway | 
 | Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
 | Apr 11, 2019 | Mar 28, 2019 | FM | <a href="http://formalmethods2019.inesctec.pt/">23rd International Symposium on Formal Methods</a> | Oct 7-11, 2019 | Porto, Portugal | 
+| Apr 11, 2019 | Mar 28, 2019 | TAP | <a href="https://tap.sosy-lab.org/2019/">13th International Conference on Tests and Proofs</a> | Oct 9-11, 2019 | Porto, Portugal | 
+| Apr 5, 2019 |  | SPIN | <a href="https://conf.researchr.org/home/spin-2019">26th International SPIN Symposium on Model Checking Software</a> | Jul 15-19, 2019 | Beijing, China | 
 | Feb 22, 2019 | Feb 15, 2019 | CADE | <a href="http://cade-27.info/">27th International Conference on Automated Deduction</a> | Aug 27-30, 2019 | Natal, Brazil | 
 | Feb 7, 2019 |  | CAV | <a href="http://i-cav.org/2019/">31st International Conference on Computer Aided Verification</a> | Jul 15-18, 2019 | New York City, NY, USA | 
 | Jan 28, 2019 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2019">International Symposium on Software Testing and Analysis</a> | July 15-19, 2019 | Beijing, China |
 | Jan 11, 2019 |  | ECOOP | <a href="https://conf.researchr.org/home/ecoop-2019">33rd European Conference on Object-Oriented Programming</a> | July, 2019 | London, UK | 
+| Jan 11, 2019 | Jan 4, 2019 | LICS | <a href="https://lics.siglog.org/lics19/">34th Annual IEEE Symposium on Logic in Computer Science</a> | Jun 24-27, 2019 | Vancouver, Canada | 
+| Dec 14, 2018 | Dec 7, 2018 | NFM | <a href="https://robonaut.jsc.nasa.gov/R2/pages/nfm2019.html">11th NASA Formal Methods Symposium</a> | May 7-9, 2019 | Houston, Texas, USA | 
 | Dec 7, 2018 | Nov 30, 2018 | DSN | <a href="http://www.dsn.org/">49th Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 24-27, 2019 | Portland, Oregon, USA |
 | Nov 16, 2018 |  | PLDI | <a href="https://conf.researchr.org/home/pldi-2019">40th ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 24-26, 2019 | Arizona, USA |
 |  |  | ETAPS | <a href="http://www.etaps.org/">The European Joint Conferences on Theory and Practice of Software</a> | Apr 6-11, 2019 | Prague, Czech Republic |
@@ -53,14 +58,8 @@ TODOs
 | Apr 6, 2018 |  | SAS | <a href="http://staticanalysis.org/sas2018/">25th International Static Analysis Symposium</a> | Aug 29-31, 2018 | New York City, New York, USA | 
 | Mar 9, 2018 |  | FSE | <a href="https://conf.researchr.org/home/fse-2018">26th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Nov 4-9, 2018 | Lake Buena Vista, Florida, USA | 
 | Mar 2, 2018 | Feb 23, 2018 | TASE | <a href="https://tase2018.jnu.edu.cn/">12th International Symposium on Theoretical Aspects of Software Engineering</a> | Aug 29-31, 2018 | Guangzhou, China | 
-| Mar 2, 2018 | Feb 23, 2018 | SEFM | <a href="https://www.isf.cs.tu-bs.de/cms/events/sefm2018/">16th IEEE International Conference on Software Engineering and Formal Methods</a> | Jun 27-29, 2018 | Toulouse, France | 
-| Mar 2, 2018 | Feb 23, 2018 | TAP | <a href="https://tap18.lri.fr/">18th International Conference on Tests and Proofs</a> | Jun 27-29, 2018 | Toulouse, France | 
-| Feb 18, 2018 |  | SPIN | <a href="http://spin2018.uma.es/">25th International SPIN Symposium on Model Checking Software</a> | Jun 20-22, 2018 | Malaga, Spain | 
-| Jan 31, 2018 | Jan 24, 2018 | LICS | <a href="">34th Annual IEEE Symposium on Logic in Computer Science</a> | Jun 22-27, 2019 | Vancouver, Canada | 
 | Jan 29, 2018 | Jan 22, 2018 | IJCAR | <a href="http://ijcar2018.org/">9th International Joint Conference on Automated Reasoning</a> | Jul 14-17, 2018 | Oxford, UK | 
-| Nov 20, 2017 | Nov 10, 2017 | NFM | <a href="https://shemesh.larc.nasa.gov/NFM2018/">10th NASA Formal Methods Symposium</a> | Apr 17-19, 2018 | Newport News, Virginia, USA | 
 |  |  | ICS | <a href="">33rd International Conference on Supercomputing</a> | Jun 26-28, 2019 | Phoenix, Arizona, USA |
-| Jul 21, 2017 |  | HVC | <a href="https://www.research.ibm.com/haifa/conferences/hvc2017/">13th Haifa Verification Conference</a> | Nov 13-15, 2017 | IBM Haifa Labs, Israel |
 | May 21, 2017 | May 14, 2017 | FMICS-AVoCS | <a href="http://www.es.mdh.se/conferences/fmics-avocs-2017/">International Workshop on Formal Methods for Industrial Critical Systems and Automated Verification of Critical Systems</a> | Sep 18-20, 2017 | Torino, Italy | 
 | Apr 1, 2014 |  | SSV | <a href="http://www.ssv-conference.org/">8th International Workshop on Systems Software Verification</a> | Jul 23-24, 2014 | Vienna, Austria | 
 
