--- a/2019.md
+++ b/2019.md
@@ -3,7 +3,10 @@
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
 | May 13, 2019 | May 6, 2019 | ASE | <a href="https://2019.ase-conferences.org/">34th IEEE/ACM International Conference on Automated Software Engineering</a> | Nov 11-15, 2019 | San Diego, California, USA | 
+| May 12, 2019 | May 5, 2019 | ICTAC | <a href="http://ictac2019.redcad.org/">16th International Colloquium on Theoretical Aspects of Computing</a> | Oct 30-Nov 4, 2019 | Hammamet, Tunisia | 
 | May 10, 2019 | May 3, 2019 | SEFM | <a href="https://sefm2019.inria.fr/">17th IEEE International Conference on Software Engineering and Formal Methods</a> | Sep 16-20, 2019 | Oslo, Norway | 
+| May 3, 2019 | Apr 26, 2019 | ATVA | <a href="http://atva2019.iis.sinica.edu.tw/">17th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 28-31, 2019 | Taipei City, Taiwan | 
+| Apr 30, 2019 |  | RV | <a href="https://www.react.uni-saarland.de/rv2019/">19th International Conference on Runtime Verification</a> | Oct 8-11, 2019 | Porto, Portugal | 
 | Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
 | Apr 22, 2019 | Apr 15, 2019 | CONCUR | <a href="https://event.cwi.nl/concur2019/">30th International Conference on Concurrency Theory</a> | Aug 26-31, 2019 | Amsterdam, Netherlands | 
 | Apr 11, 2019 | Mar 28, 2019 | FM | <a href="http://formalmethods2019.inesctec.pt/">23rd International Symposium on Formal Methods</a> | Oct 7-11, 2019 | Porto, Portugal | 
@@ -41,15 +44,12 @@ TODOs
 
 | Aug 13, 2018 | Aug 6, 2018 | LPAR | <a href="https://easychair.org/smart-program/LPAR-22/">22nd International Conference on Logic for Programming, Artificial Intelligence and Reasoning</a> | Nov 16-21, 2018 | Awassa, Ethiopia | 
 | Jul 20, 2018 |  | SBMF | <a href="http://www.sbmf2018.ufba.br/">21st Brazilian Symposium on Formal Methods</a> | Nov 28-30, 2018 | Salvador, Brazil | 
-| Jun 25, 2018 | Jun 18, 2018 | RV | <a href="https://rv2018.isp.uni-luebeck.de/">18th International Conference on Runtime Verification</a> | Nov 10-13, 2018 | Limassol, Cyprus | 
 | Jun 15, 2018 | Jun 12, 2018 | APLAS | <a href="http://aplas2018.org/">16th Asian Symposium on Programming Languages and Systems</a> | Dec 3-5, 2018 | Wellington, New Zealand | 
 | Jun 1, 2018 |  | PRDC | <a href="http://prdc.dependability.org/PRDC2018/">23rd IEEE Pacific Rim International Symposium on Dependable Computing</a> | Dec 4-7, 2018 | Taipei, Taiwan | 
 | May 18, 2018 | May 11, 2018 | FMCAD | <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD18/">18th International Conference on Formal Methods in Computer-Aided Design</a> | Oct 30-Nov 2, 2018 | Austin, Texas, USA | 
 | May 14, 2018 | May 7, 2018 | ICFEM | <a href="http://formal-analysis.com/icfem/2018/">20th International Conference on Formal Engineering Methods</a> | Nov 12-16, 2018 | Gold Coast, Australia | 
-| May 11, 2018 | May 4, 2018 | ICTAC | <a href="https://www.ictac.org.za/">15th International Colloquium on Theoretical Aspects of Computing</a> | Oct 12-19, 2018 | Stellenbosch, South Africa | 
 | May 7, 2018 | Apr 23, 2018 | SETTA | <a href="http://lcs.ios.ac.cn/setta2018/">4th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Sep 4-6, 2018 | Beijing, China | 
 | May 5, 2018 | May 1, 2018 | ISSRE | <a href="http://www.issre.net/">29th IEEE International Symposium on Software Reliability Engineering</a> | Oct 15-18, 2018 | Memphis, Tennessee, USA | 
-| May 4, 2018 |  | ATVA | <a href="http://atva-conference.org/">16th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 7-10, 2018 | Los Angeles, California, USA | 
 | May 3, 2018 | Apr 26, 2018 | OSDI | <a href="https://www.usenix.org/conference/osdi18">13th USENIX Symposium on Operating Systems Design and Implementation</a> | Oct 8-10, 2018 | Carlsbad, California, USA | 
 | Apr 27, 2018 | Apr 20, 2018 | FMICS | <a href="http://fmics2018.fi.muni.cz/">23rd International Conference on Formal Methods for Industrial Critical Systems</a> | Sep 3-4, 2018 | Maynooth, Ireland | 
 | Apr 22, 2018 | Apr 15, 2018 | VSTTE | <a href="http://vstte18.it.uu.se/">10th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 18-19, 2018 | Oxford, UK | 
