--- a/2019.md
+++ b/2019.md
@@ -2,13 +2,16 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| May 21, 2019 | May 14, 2019 | ICFEM | <a href="http://csse.szu.edu.cn/icfem2019/">21st International Conference on Formal Engineering Methods</a> | Nov 5-9, 2019 | Shenzhen, China | 
 | May 13, 2019 | May 6, 2019 | ASE | <a href="https://2019.ase-conferences.org/">34th IEEE/ACM International Conference on Automated Software Engineering</a> | Nov 11-15, 2019 | San Diego, California, USA | 
 | May 12, 2019 | May 5, 2019 | ICTAC | <a href="http://ictac2019.redcad.org/">16th International Colloquium on Theoretical Aspects of Computing</a> | Oct 30-Nov 4, 2019 | Hammamet, Tunisia | 
 | May 10, 2019 | May 3, 2019 | SEFM | <a href="https://sefm2019.inria.fr/">17th IEEE International Conference on Software Engineering and Formal Methods</a> | Sep 16-20, 2019 | Oslo, Norway | 
 | May 3, 2019 | Apr 26, 2019 | ATVA | <a href="http://atva2019.iis.sinica.edu.tw/">17th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 28-31, 2019 | Taipei City, Taiwan | 
 | Apr 30, 2019 |  | RV | <a href="https://www.react.uni-saarland.de/rv2019/">19th International Conference on Runtime Verification</a> | Oct 8-11, 2019 | Porto, Portugal | 
+| Apr 29, 2019 | Apr 23, 2019 | VSTTE | <a href="https://sri-csl.github.io/VSTTE19/">11th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 13-14, 2019 | New York City, NY, USA | 
 | Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
 | Apr 22, 2019 | Apr 15, 2019 | CONCUR | <a href="https://event.cwi.nl/concur2019/">30th International Conference on Concurrency Theory</a> | Aug 26-31, 2019 | Amsterdam, Netherlands | 
+| Apr 18, 2019 |  | SAS | <a href="http://staticanalysis.org/sas2019/">26th International Static Analysis Symposium</a> | Oct 8-11, 2019 | Porto, Portugal | 
 | Apr 11, 2019 | Mar 28, 2019 | FM | <a href="http://formalmethods2019.inesctec.pt/">23rd International Symposium on Formal Methods</a> | Oct 7-11, 2019 | Porto, Portugal | 
 | Apr 11, 2019 | Mar 28, 2019 | TAP | <a href="https://tap.sosy-lab.org/2019/">13th International Conference on Tests and Proofs</a> | Oct 9-11, 2019 | Porto, Portugal | 
 | Apr 5, 2019 |  | SPIN | <a href="https://conf.researchr.org/home/spin-2019">26th International SPIN Symposium on Model Checking Software</a> | Jul 15-19, 2019 | Beijing, China | 
@@ -17,7 +20,7 @@
 | Feb 20, 2019 |  | FSE | <a href="https://esec-fse19.ut.ee/">27th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Aug 26-30, 2019 | Tallinn, Estonia | 
 | Feb 7, 2019 |  | CAV | <a href="http://i-cav.org/2019/">31st International Conference on Computer Aided Verification</a> | Jul 15-18, 2019 | New York City, NY, USA | 
 | Jan 28, 2019 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2019">International Symposium on Software Testing and Analysis</a> | July 15-19, 2019 | Beijing, China |
-| Jan 11, 2019 |  | ECOOP | <a href="https://conf.researchr.org/home/ecoop-2019">33rd European Conference on Object-Oriented Programming</a> | July, 2019 | London, UK | 
+| Jan 11, 2019 |  | ECOOP | <a href="https://conf.researchr.org/home/ecoop-2019">33rd European Conference on Object-Oriented Programming</a> | July 15-19, 2019 | London, UK | 
 | Jan 11, 2019 | Jan 4, 2019 | LICS | <a href="https://lics.siglog.org/lics19/">34th Annual IEEE Symposium on Logic in Computer Science</a> | Jun 24-27, 2019 | Vancouver, Canada | 
 | Jan 11, 2019 | Jan 4, 2019 | TASE | <a href="http://www.se.gxnu.edu.cn/tase2019/">13th International Symposium on Theoretical Aspects of Software Engineering</a> | Jul 29-31, 2019 | Guilin, China | 
 | Dec 14, 2018 | Dec 7, 2018 | NFM | <a href="https://robonaut.jsc.nasa.gov/R2/pages/nfm2019.html">11th NASA Formal Methods Symposium</a> | May 7-9, 2019 | Houston, Texas, USA | 
@@ -47,16 +50,13 @@ TODOs
 | Jun 15, 2018 | Jun 12, 2018 | APLAS | <a href="http://aplas2018.org/">16th Asian Symposium on Programming Languages and Systems</a> | Dec 3-5, 2018 | Wellington, New Zealand | 
 | Jun 1, 2018 |  | PRDC | <a href="http://prdc.dependability.org/PRDC2018/">23rd IEEE Pacific Rim International Symposium on Dependable Computing</a> | Dec 4-7, 2018 | Taipei, Taiwan | 
 | May 18, 2018 | May 11, 2018 | FMCAD | <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD18/">18th International Conference on Formal Methods in Computer-Aided Design</a> | Oct 30-Nov 2, 2018 | Austin, Texas, USA | 
-| May 14, 2018 | May 7, 2018 | ICFEM | <a href="http://formal-analysis.com/icfem/2018/">20th International Conference on Formal Engineering Methods</a> | Nov 12-16, 2018 | Gold Coast, Australia | 
 | May 7, 2018 | Apr 23, 2018 | SETTA | <a href="http://lcs.ios.ac.cn/setta2018/">4th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Sep 4-6, 2018 | Beijing, China | 
 | May 5, 2018 | May 1, 2018 | ISSRE | <a href="http://www.issre.net/">29th IEEE International Symposium on Software Reliability Engineering</a> | Oct 15-18, 2018 | Memphis, Tennessee, USA | 
 | May 3, 2018 | Apr 26, 2018 | OSDI | <a href="https://www.usenix.org/conference/osdi18">13th USENIX Symposium on Operating Systems Design and Implementation</a> | Oct 8-10, 2018 | Carlsbad, California, USA | 
 | Apr 27, 2018 | Apr 20, 2018 | FMICS | <a href="http://fmics2018.fi.muni.cz/">23rd International Conference on Formal Methods for Industrial Critical Systems</a> | Sep 3-4, 2018 | Maynooth, Ireland | 
-| Apr 22, 2018 | Apr 15, 2018 | VSTTE | <a href="http://vstte18.it.uu.se/">10th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 18-19, 2018 | Oxford, UK | 
 | Apr 20, 2018 | Apr 16, 2018 | IFM | <a href="https://ifm2018.cs.nuim.ie/">14th International Conference on integrated Formal Methods</a> | Sep 5-7, 2018 | Maynooth, Ireland | 
 | Apr 15, 2018 | Apr 10, 2018 | AVOCS | <a href="http://avocs18.irisa.fr/">18th International Workshop on Automated Verification of Critical Systems</a> | Jul 18-19, 2018 | Oxford, UK | 
 | Apr 15, 2018 | Apr 8, 2018 | SMT | <a href="http://smt-workshop.cs.uiowa.edu/2018/">16th International Workshop on Satisfiability Modulo Theories</a> | Jul 12-13, 2018 | Oxford, UK | 
-| Apr 6, 2018 |  | SAS | <a href="http://staticanalysis.org/sas2018/">25th International Static Analysis Symposium</a> | Aug 29-31, 2018 | New York City, New York, USA | 
 | Jan 29, 2018 | Jan 22, 2018 | IJCAR | <a href="http://ijcar2018.org/">9th International Joint Conference on Automated Reasoning</a> | Jul 14-17, 2018 | Oxford, UK | 
 |  |  | ICS | <a href="">33rd International Conference on Supercomputing</a> | Jun 26-28, 2019 | Phoenix, Arizona, USA |
 | May 21, 2017 | May 14, 2017 | FMICS-AVoCS | <a href="http://www.es.mdh.se/conferences/fmics-avocs-2017/">International Workshop on Formal Methods for Industrial Critical Systems and Automated Verification of Critical Systems</a> | Sep 18-20, 2017 | Torino, Italy | 
