--- a/2019.md
+++ b/2019.md
@@ -9,26 +9,26 @@
 | May 10, 2019 | May 3, 2019 | SEFM | <a href="https://sefm2019.inria.fr/">17th IEEE International Conference on Software Engineering and Formal Methods</a> | Sep 16-20, 2019 | Oslo, Norway | 
 | May 3, 2019 | Apr 26, 2019 | ATVA | <a href="http://atva2019.iis.sinica.edu.tw/">17th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 28-31, 2019 | Taipei City, Taiwan | 
 | Apr 30, 2019 |  | RV | <a href="https://www.react.uni-saarland.de/rv2019/">19th International Conference on Runtime Verification</a> | Oct 8-11, 2019 | Porto, Portugal | 
-| Apr 29, 2019 | Apr 23, 2019 | VSTTE | <a href="https://sri-csl.github.io/VSTTE19/">11th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 13-14, 2019 | New York City, NY, USA | 
+| Apr 29, 2019 | Apr 23, 2019 | VSTTE | <a href="https://sri-csl.github.io/VSTTE19/">11th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 13-14, 2019 | New York City, New York, USA | 
 | Apr 24, 2019 | Apr 21, 2019 | FORMATS | <a href="https://lipn.univ-paris13.fr/formats2019/">17th International Conference on Formal Modeling and Analysis of Timed Systems</a> | Aug 26-31, 2019 | Amsterdam, Netherlands | 
 | Apr 24, 2019 | Apr 17, 2019 | SOSP | <a href="https://www.sigops.org/sosp/sosp19/">27th ACM Symposium on Operating Systems Principles</a> | Oct 7-9, 2019 | Huntsville, Canada | 
 | Apr 22, 2019 | Apr 15, 2019 | CONCUR | <a href="https://event.cwi.nl/concur2019/">30th International Conference on Concurrency Theory</a> | Aug 26-31, 2019 | Amsterdam, Netherlands | 
 | Apr 18, 2019 |  | SAS | <a href="http://staticanalysis.org/sas2019/">26th International Static Analysis Symposium</a> | Oct 8-11, 2019 | Porto, Portugal | 
-| Apr 12, 2019  | Apr 5, 2019  | EMSOFT | <a href="https://www.esweek.org/emsoft/about">International Conference on Embedded Software</a> | Oct 13-18, 2019 | New York City, USA | 
+| Apr 12, 2019  | Apr 5, 2019  | EMSOFT | <a href="https://www.esweek.org/emsoft/about">International Conference on Embedded Software</a> | Oct 13-18, 2019 | New York City, New York, USA | 
 | Apr 11, 2019 | Mar 28, 2019 | FM | <a href="http://formalmethods2019.inesctec.pt/">23rd International Symposium on Formal Methods</a> | Oct 7-11, 2019 | Porto, Portugal | 
 | Apr 11, 2019 | Mar 28, 2019 | TAP | <a href="https://tap.sosy-lab.org/2019/">13th International Conference on Tests and Proofs</a> | Oct 9-11, 2019 | Porto, Portugal | 
 | Apr 5, 2019 |  | SPIN | <a href="https://conf.researchr.org/home/spin-2019">26th International SPIN Symposium on Model Checking Software</a> | Jul 15-19, 2019 | Beijing, China | 
 | Apr 5, 2019 |  | SPLASH | <a href="https://2019.splashcon.org">10th Annual Conference on Systems, Programming, Languages and Applications: Software for Humanity</a> | Oct 20-25, 2019 | Athens, Greece | 
 | Feb 22, 2019 | Feb 15, 2019 | CADE | <a href="http://cade-27.info/">27th International Conference on Automated Deduction</a> | Aug 27-30, 2019 | Natal, Brazil | 
 | Feb 20, 2019 |  | FSE | <a href="https://esec-fse19.ut.ee/">27th ACM SIGSOFT International Symposium on the Foundations of Software Engineering</a> | Aug 26-30, 2019 | Tallinn, Estonia | 
-| Feb 7, 2019 |  | CAV | <a href="http://i-cav.org/2019/">31st International Conference on Computer Aided Verification</a> | Jul 15-18, 2019 | New York City, NY, USA | 
+| Feb 7, 2019 |  | CAV | <a href="http://i-cav.org/2019/">31st International Conference on Computer Aided Verification</a> | Jul 15-18, 2019 | New York City, New York, USA | 
 | Jan 28, 2019 |  | ISSTA | <a href="https://conf.researchr.org/home/issta-2019">International Symposium on Software Testing and Analysis</a> | July 15-19, 2019 | Beijing, China |
 | Jan 11, 2019 |  | ECOOP | <a href="https://conf.researchr.org/home/ecoop-2019">33rd European Conference on Object-Oriented Programming</a> | July 15-19, 2019 | London, UK | 
 | Jan 11, 2019 | Jan 4, 2019 | LICS | <a href="https://lics.siglog.org/lics19/">34th Annual IEEE Symposium on Logic in Computer Science</a> | Jun 24-27, 2019 | Vancouver, Canada | 
 | Jan 11, 2019 | Jan 4, 2019 | TASE | <a href="http://www.se.gxnu.edu.cn/tase2019/">13th International Symposium on Theoretical Aspects of Software Engineering</a> | Jul 29-31, 2019 | Guilin, China | 
 | Dec 14, 2018 | Dec 7, 2018 | NFM | <a href="https://robonaut.jsc.nasa.gov/R2/pages/nfm2019.html">11th NASA Formal Methods Symposium</a> | May 7-9, 2019 | Houston, Texas, USA | 
 | Dec 7, 2018 | Nov 30, 2018 | DSN | <a href="http://www.dsn.org/">49th Annual IEEE/IFIP International Conference on Dependable Systems and Networks</a> | Jun 24-27, 2019 | Portland, Oregon, USA |
-| Nov 16, 2018 |  | PLDI | <a href="https://conf.researchr.org/home/pldi-2019">40th ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 24-26, 2019 | Arizona, USA |
+| Nov 16, 2018 |  | PLDI | <a href="https://conf.researchr.org/home/pldi-2019">40th ACM SIGPLAN Conference on Programming Language Design and Implementation</a> | Jun 24-26, 2019 | Phoenix, Arizona, USA |
 |  |  | ETAPS | <a href="http://www.etaps.org/">The European Joint Conferences on Theory and Practice of Software</a> | Apr 6-11, 2019 | Prague, Czech Republic |
 | Nov 15, 2018 | Nov 7, 2018 | TACAS | <a href="https://conf.researchr.org/track/etaps-2019/tacas-2019-papers">25th International Conference on Tools and Algorithms for the Construction and Analysis of Systems</a> | Apr 8-11, 2019 | Prague, Czech Republic | 
 | Nov 15, 2018 | Nov 7, 2018 | FOSSACS | <a href="https://conf.researchr.org/track/etaps-2019/fossacs-2019-papers">22nd International Conference on Foundations of Software Science and Computation Structures</a> | Apr 8-11, 2019 | Prague, Czech Republic |
